[dependencies]
lockfree = '0.5.1'

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = [
    'asynchronous',
    'concurrency',
    'data-structures',
]
docs = 'docs.rs/employer'
edition = '2018'
homepage = 'https://github.com/kaikalii/employer'
keywords = [
    'thread',
    'work',
    'schedule',
]
license = 'MIT'
name = 'employer'
readme = 'readme.md'
version = '0.1.0'
